unpackaged/main/default/objects/POS_Customization__c/POS_Customization__c.object-meta.xml
<CustomObject>
    <label>POS Customization</label>
    <nameField>
        <displayFormat>ITEM-{0000}</displayFormat>
        <label>POS Customization Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>POS Customizations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>