unpackaged/main/default/objects/POS_Customization__c/fields/Barrel__c.field-meta.xml
<CustomField>
    <fullName>Barrel__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Barrel</label>
    <referenceTo>Barrel__c</referenceTo>
    <relationshipLabel>POS Customizations</relationshipLabel>
    <relationshipName>POS_Customizations</relationshipName>
    <type>Lookup</type>
</CustomField>