unpackaged/main/default/objects/POS_Customization__c/fields/Include_Signature_on_Label__c.field-meta.xml
<CustomField>
    <fullName>Include_Signature_on_Label__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Include a signature on the back label of the bottle for Makers Mark</description>
    <inlineHelpText>Include a signature on the back label of the bottle for Makers Mark</inlineHelpText>
    <label>Include Signature on Label</label>
    <type>Checkbox</type>
</CustomField>