unpackaged/main/default/objects/POS_Customization__c/fields/IO_Code__c.field-meta.xml
<CustomField>
    <fullName>IO_Code__c</fullName>
    <description>The purpose is to collect IO information so the marketing team knows the correct team to charge for POS items once they receive their invoice from the supplier.</description>
    <label>IO Code</label>
    <length>30</length>
    <type>Text</type>
</CustomField>