unpackaged/main/default/objects/POS_Customization__c/fields/Premise_Type__c.field-meta.xml
<CustomField>
    <fullName>Premise_Type__c</fullName>
    <formula>TEXT(Barrel__r.Case__r.Retail_Account__r.PremiseType__c )</formula>
    <label>Premise Type</label>
    <type>Text</type>
</CustomField>