unpackaged/main/default/objects/POS_Customization__c/fields/Rick__c.field-meta.xml
<CustomField>
    <fullName>Rick__c</fullName>
    <formula>TEXT(Barrel__r.Rick__c)</formula>
    <label>Rick</label>
    <type>Text</type>
</CustomField>