unpackaged/main/default/objects/POS_Customization__c/fields/Selection_Date__c.field-meta.xml
<CustomField>
    <fullName>Selection_Date__c</fullName>
    <formula>Barrel__r.Selection_Date__c</formula>
    <label>Selection Date</label>
    <type>Date</type>
</CustomField>