unpackaged/main/default/objects/POS_Customization__c/fields/Story__c.field-meta.xml
<CustomField>
    <fullName>Story__c</fullName>
    <formula>TEXT(Barrel__r.Story__c)</formula>
    <label>Story</label>
    <type>Text</type>
</CustomField>