unpackaged/main/default/objects/POS_Customization__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Barrel Plaque</fullName>
            </value>
            <value>
                <fullName>Bottle Cradle</fullName>
            </value>
            <value>
                <fullName>Bottle Necker</fullName>
            </value>
            <value>
                <fullName>Bottle Plate Text</fullName>
            </value>
            <value>
                <fullName>Floor Display</fullName>
            </value>
            <value>
                <fullName>Menu Insert Card-INSERT</fullName>
            </value>
            <value>
                <fullName>Pour Spout</fullName>
            </value>
            <value>
                <fullName>Shelf Glorifier</fullName>
            </value>
            <value>
                <fullName>Barrel</fullName>
            </value>
            <value>
                <fullName>Shelf Glorifier-INSERT</fullName>
            </value>
            <value>
                <fullName>Barrel Plaque-INSERT</fullName>
            </value>
            <value>
                <fullName>Bottle Cradle-INSERT</fullName>
            </value>
            <value>
                <fullName>Floor Display-INSERT</fullName>
            </value>
            <value>
                <fullName>Flight Tray</fullName>
            </value>
            <value>
                <fullName>Ring</fullName>
            </value>
            <value>
                <fullName>Commemorative Stave</fullName>
            </value>
            <value>
                <fullName>Wall Art</fullName>
            </value>
            <value>
                <fullName>Barrel Display</fullName>
            </value>
            <value>
                <fullName>Bottle Glorifier</fullName>
            </value>
            <value>
                <fullName>Hang Tag</fullName>
            </value>
            <value>
                <fullName>Selection Frame</fullName>
            </value>
            <value>
                <fullName>Menu Insert Card</fullName>
            </value>
            <value>
                <fullName>Half Barrel Rack</fullName>
            </value>
            <value>
                <fullName>Full Barrel Rack</fullName>
            </value>
            <value>
                <fullName>Barrel Head Sign</fullName>
            </value>
            <value>
                <fullName>Snifter Glassware</fullName>
            </value>
            <value>
                <fullName>Half Barrel</fullName>
            </value>
            <value>
                <fullName>Ring: $40</fullName>
            </value>
            <value>
                <fullName>Wall Art: $45</fullName>
            </value>
            <value>
                <fullName>Flight Tray: $994</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>