unpackaged/main/default/objects/POS_Customization__c/fields/Uploaded_by__c.field-meta.xml
<CustomField>
    <fullName>Uploaded_by__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Uploaded By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>POS_Customizations</relationshipName>
    <type>Lookup</type>
</CustomField>