unpackaged/main/default/objects/POS_Customization__c/fields/Warehouse__c.field-meta.xml
<CustomField>
    <fullName>Warehouse__c</fullName>
    <formula>TEXT(Barrel__r.Warehouse__c)</formula>
    <label>Warehouse</label>
    <type>Text</type>
</CustomField>