unpackaged/main/default/objects/POS_Customization__c/listViews/El_Tesoro_Single_Barrel_POS_Customization.listView-meta.xml
<ListView>
    <fullName>El_Tesoro_Single_Barrel_POS_Customization</fullName>
    <filterScope>Queue</filterScope>
    <label>El Tesoro - Single Barrel</label>
    <queue>El_Tesoro_Single_Barrel</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>