unpackaged/main/default/objects/POS_Customization__c/listViews/Jim_Beam_Single_Barrel_POS_Customization.listView-meta.xml
<ListView>
    <fullName>Jim_Beam_Single_Barrel_POS_Customization</fullName>
    <filterScope>Queue</filterScope>
    <label>Jim Beam - Single Barrel</label>
    <queue>Jim_Beam_Single_Barrel</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>